@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-13T08:11:43Z",
-  "count_outdated" : 391,
-  "uniques_outdated" : 20,
-  "count" : 408,
+  "timestamp" : "2022-06-14T00:56:43Z",
+  "count_outdated" : 395,
+  "uniques_outdated" : 21,
+  "count" : 410,
   "uniques" : 26,
   "views" : [
-    {
-      "timestamp": "2022-05-30T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 4 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-31T00:00:00Z",
       "count": 3,
