@@ -1,12 +1,7 @@
 {
-  "count": 17,
+  "count": 15,
   "uniques": 1,
   "views": [
-    {
-      "timestamp": "2022-05-30T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-05-31T00:00:00Z",
       "count": 3,
